--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,10 @@
 spring.application.name='Spring Boot Jpa-Security!'
 spring.web.resources.static-locations=classpath:/static/
 
-logging.level.org.springframework=INFO
-logging.level.mc.apps.spring=INFO
-logging.level.com.zaxxer=DEBUG
-## HikariCP configuration (default Connection Pool - Spring Boot 2)
-logging.level.root=ERROR
+#logging.level.org.springframework=INFO
+#logging.level.mc.apps.spring=INFO
+#logging.level.com.zaxxer=DEBUG
+#logging.level.root=ERROR
 
 # server
 server.port=8082
