views template (generic)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,8 @@ spring.thymeleaf.prefix=classpath:/views/
 spring.thymeleaf.suffix=.html
 
 # security
-spring.security.user.name=mc
-spring.security.user.password=123
+#spring.security.user.name=mc
+#spring.security.user.password=123
 
 # Jpa - MySQL
 ## config. (MySQL) :
