--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/spring_db?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
-
+# CF spring_db.sql
 
 
